# RSVP_

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  test.txt
include/pacer/: cli.h  display.h  pacing.h  pdf_text_souce.h  pdf_text_source.h  plain_text_source.h  progress_store.h  session.h  terminal_display.h  text_source.h  tokenizer.h
src/: cli.cpp  main.cpp  pacing.cpp  pdf_text_source.cpp  plain_text_source.cpp  progress_store.cpp  session.cpp  terminal_display.cpp  text_source.cpp  tokenizer.cpp
tests/: pacing_tests.cpp  tokenizer_tests.cpp
